fixed bug wheredivs didn't stretch to edge of screen

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 .header {
     background-color: #1F2937;
     display: flex;
